--- a/Project3_Classification_SQL/FootballPlayerRankingApp/requirements.txt
+++ b/Project3_Classification_SQL/FootballPlayerRankingApp/requirements.txt
@@ -2,9 +2,9 @@ bokeh==2.4.2
 catboost==1.0.3
 imbalanced_learn==0.8.1
 imblearn==0.0
-matplotlib==3.5.1
+matplotlib==3.4.3
 numpy==1.21.1
-pandas==1.4.1
+pandas<1.2.0
 Pillow==9.0.1
 scikit_learn==1.0.2
 seaborn==0.11.2
